<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>AdvancedDisplays</groupId>
    <artifactId>parent</artifactId>
    <version>1.5</version>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>

        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.spigotmc</groupId>
                <artifactId>spigot-api</artifactId>
                <version>1.19.4-R0.1-SNAPSHOT</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>me.clip</groupId>
                <artifactId>placeholderapi</artifactId>
                <version>2.11.6</version>
                <scope>provided</scope>
            </dependency>


            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-all</artifactId>
                <version>4.1.110.Final</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.7.0</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <sourceFileIncludes>
                                <sourceFileInclude>me/lucaaa/advanceddisplays/api/**</sourceFileInclude>
                            </sourceFileIncludes>
                            <sourceFileExcludes>
                                <sourceFileExclude>me/lucaaa/advanceddisplays/api/ADAPIImplementation.java</sourceFileExclude>
                                <sourceFileExclude>me/lucaaa/advanceddisplays/api/ADAPIProviderImplementation.java</sourceFileExclude>
                                <sourceFileExclude>me/lucaaa/advanceddisplays/api/APIDisplays.java</sourceFileExclude>
                                <sourceFileExclude>me/lucaaa/advanceddisplays/api/ADAPIProvider.java</sourceFileExclude>
                            </sourceFileExcludes>
                            <jarOutputDirectory>${project.basedir}</jarOutputDirectory>
                            <windowtitle>AdvancedDisplays API</windowtitle>
                            <doctitle>AdvancedDisplays API ${project.version}</doctitle>
                            <links>
                                <link>https://hub.spigotmc.org/javadocs/spigot</link>
                            </links>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>jitpack</id>
            <modules>
                <module>api</module>
            </modules>
        </profile>

        <profile>
            <id>build-jar</id>
            <modules>
                <module>nms</module>
                <module>plugin</module>
                <module>common</module>
                <module>api</module>
            </modules>
        </profile>
    </profiles>
</project>
